// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs should render component 1`] = `
<div
  className="mfui-breadcrumbs mfui-breadcrumbs_color_default"
>
  <div
    className="mfui-breadcrumbs__item"
    key="МегаФон"
  >
    <TextLink
      color="default"
      href="#"
      underlineStyle="solid"
      underlineVisibility="hover"
    >
      МегаФон
    </TextLink>
  </div>
  <div
    className="mfui-breadcrumbs__item"
    key="Мобильная связь"
  >
    <TextLink
      color="default"
      href="#"
      underlineStyle="solid"
      underlineVisibility="hover"
    >
      Мобильная связь
    </TextLink>
  </div>
  <div
    className="mfui-breadcrumbs__item"
    key="Тарифы"
  >
    <TextLink
      color="default"
      href="#"
      underlineStyle="solid"
      underlineVisibility="hover"
    >
      Тарифы
    </TextLink>
  </div>
</div>
`;

exports[`Breadcrumbs should render with optional props 1`] = `
<div
  className="mfui-breadcrumbs mfui-breadcrumbs_color_white custom-class-name"
>
  <div
    className="mfui-breadcrumbs__item item-custom-class-name"
    key="МегаФон"
  >
    <TextLink
      color="white"
      href="#"
      underlineStyle="solid"
      underlineVisibility="hover"
    >
      МегаФон
    </TextLink>
  </div>
  <div
    className="mfui-breadcrumbs__item item-custom-class-name"
    key="Мобильная связь"
  >
    <TextLink
      color="white"
      href="#"
      underlineStyle="solid"
      underlineVisibility="hover"
    >
      Мобильная связь
    </TextLink>
  </div>
  <div
    className="mfui-breadcrumbs__item item-custom-class-name"
    key="Тарифы"
  >
    <TextLink
      color="white"
      href="#"
      underlineStyle="solid"
      underlineVisibility="hover"
    >
      Тарифы
    </TextLink>
  </div>
</div>
`;
